# Sudu

./: CMakeLists.txt  README.md  build.py  example.sudu  run.ps1  run.sh  syntax.sudu
include/: ast.h  common.h  errors.h  lexer.h  parser.h  tests.h
include/frontend/: ast.h  frontend.h  lexer.h  parser.h
include/util/: common.h  errors.h
src/: ast.c  common.c  errors.c  lexer.c  main.c  parser.c  tests.c
src/frontend/: ast.c  frontend.c  lexer.c  parser.c
src/util/: common.c  errors.c  tests.c
